examples/invalid/inequality.lama
int a = 4 ;
int b = 3 ;
double c = true ;
bool res = a != b ;
print res ;
bool exc = a != c ;
print exc ;